<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.meow.rentalz_kotlin.fragments.rentalmodify.RentalModifyViewModel" />
        <import type="com.meow.rentalz_kotlin.utils.Utils" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".rentalmodify.RentalModifyFragment">

        <ScrollView
            android:id="@+id/scrollView2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintBottom_toTopOf="@+id/delete_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:hint="@string/hint_property_type"
                    app:propertyTypeValidation="@{viewModel.propertyTypeValid}">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edit_property_type"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@={viewModel.propertyType}" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:hint="@string/hint_bedroom_type"
                    app:bedroomTypeValidation="@{viewModel.bedroomTypeValid}">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edit_bedroom_type"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@={viewModel.bedroomType}" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:hint="@string/hint_time"
                    app:dateValidation="@{viewModel.creationDateValid}">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edit_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="datetime"
                        android:text="@={viewModel.creationDate}"
                        android:ems="10" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:hint="@string/hint_price"
                    app:priceValidation="@{viewModel.monthlyPriceValid}">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edit_price"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="numberDecimal"
                        android:text="@={viewModel.monthlyPrice}"
                        android:ems="10" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:hint="@string/hint_address">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edit_address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPostalAddress"
                        android:text="@={viewModel.address}" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:hint="@string/hint_furniture_type">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edit_furniture_type"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@={viewModel.furnitureType}" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:hint="@string/hint_reporter_name"
                    app:reporterNameValidation="@{viewModel.reporterNameValid}">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edit_reporter_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"
                        android:text="@={viewModel.reporterName}"
                        android:ems="10" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="186dp"
                    android:layout_marginTop="16dp"
                    android:hint="@string/hint_notes">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edit_notes"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textMultiLine"
                        android:text="@={viewModel.notes}"
                        android:ems="10"
                        android:gravity="start|top"
                        android:lines="10"/>
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>
        </ScrollView>

        <Button
            android:id="@+id/edit_button"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:enabled="@{Utils.hasNoErrors(viewModel.validationStatuses)}"
            android:onClick="@{() -> viewModel.onEditButtonClicked()}"
            android:text="@string/hint_edit"
            app:layout_constraintBottom_toBottomOf="@+id/delete_button"
            app:layout_constraintEnd_toStartOf="@+id/delete_button"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/delete_button"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:onClick="@{() -> viewModel.onDeleteButtonClicked()}"
            android:text="@string/hint_delete"
            android:theme="@style/RedButtons"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/back_button"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/edit_button" />

        <Button
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/hint_back"
            android:onClick="@{() -> viewModel.onBackButtonClicked()}"
            app:layout_constraintBottom_toBottomOf="@+id/delete_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/delete_button" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>