<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.meow.rentalz_kotlin.fragments.rentaladd.RentalAddViewModel" />

        <import type="com.meow.rentalz_kotlin.utils.Utils" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/addRentalFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".rentaladd.AddRentalFragment">

        <ScrollView
            android:id="@+id/scrollView2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintBottom_toTopOf="@+id/next_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:hint="@string/hint_property_type"
                    app:propertyTypeValidation="@{viewModel.propertyTypeValid}">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edit_property_type"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@={viewModel.propertyType}" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:hint="@string/hint_bedroom_type"
                    app:bedroomTypeValidation="@{viewModel.bedroomTypeValid}">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edit_bedroom_type"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@={viewModel.bedroomType}" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:hint="@string/hint_time"
                    app:dateValidation="@{viewModel.creationDateValid}">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edit_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="date"
                        android:text="@={viewModel.creationDate}" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:hint="@string/hint_price"
                    app:priceValidation="@{viewModel.monthlyPriceValid}">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edit_price"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="numberDecimal"
                        android:text="@={viewModel.monthlyPrice}" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:hint="@string/hint_address">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edit_address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPostalAddress"
                        android:text="@={viewModel.address}" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:hint="@string/hint_furniture_type">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edit_furniture_type"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@={viewModel.furnitureType}" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:hint="@string/hint_reporter_name"
                    app:reporterNameValidation="@{viewModel.reporterNameValid}">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edit_reporter_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="textPersonName"
                        android:text="@={viewModel.reporterName}" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="186dp"
                    android:layout_marginTop="16dp"
                    android:hint="@string/hint_notes">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edit_notes"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:gravity="start|top"
                        android:inputType="textMultiLine"
                        android:lines="10"
                        android:text="@={viewModel.notes}" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>
        </ScrollView>

        <Button
            android:id="@+id/next_button"
            style="@android:style/Widget.Material.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:enabled="@{Utils.hasNoErrors(viewModel.validationStatuses)}"
            android:onClick="@{() -> viewModel.onNextButtonClicked()}"
            android:text="@string/hint_next"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/cancel_button"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{() -> viewModel.onCancelButtonClicked()}"
            android:text="@android:string/cancel"
            app:layout_constraintBottom_toBottomOf="@+id/next_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/next_button" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>